// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filterBar should initially render properly when dialog is closed 1`] = `
<glamorous(div)
  id="filtersListWrapper"
>
  <List
    id="filtersList"
    style={
      Object {
        "backgroundColor": "rgba(51, 51, 51, 0.8)",
        "width": "100%",
      }
    }
  >
    <glamorous(div)
      id="activeFiltersWrapper"
    >
      <ActiveFilters
        filterGroups={
          Array [
            1,
            2,
            3,
          ]
        }
        filterMap={Object {}}
        handleOpen={[Function]}
        resetFilters={[Function]}
        toggleAvailability={[Function]}
        toggleFilter={[Function]}
      />
    </glamorous(div)>
    <ListItem
      autoGenerateNestedIndicator={true}
      containerElement="span"
      disableKeyboardFocus={false}
      disabled={false}
      initiallyOpen={false}
      insetChildren={false}
      nestedItems={
        Array [
          <Connect(FilterDialog)
            filterGroups={
                Array [
                    1,
                    2,
                    3,
                  ]
            }
            handleClose={[Function]}
        />,
        ]
      }
      nestedLevel={0}
      onClick={[Function]}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onNestedListToggle={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      open={false}
      primaryText="Piú filtri"
      primaryTogglesNestedList={false}
      rightIcon={
        <ContentAddCircleOutline
          color="#fff"
          style={
            Object {
              "height": 30,
              "width": 30,
            }
          }
        />
      }
      secondaryTextLines={1}
      style={
        Object {
          "color": "white",
        }
      }
    />
  </List>
</glamorous(div)>
`;

exports[`filterBar should initially render properly when dialog is open 1`] = `
<glamorous(div)
  id="filtersListWrapper"
>
  <List
    id="filtersList"
    style={
      Object {
        "backgroundColor": "rgba(51, 51, 51, 0.8)",
        "width": "100%",
      }
    }
  >
    <glamorous(div)
      id="activeFiltersWrapper"
    >
      <ActiveFilters
        filterGroups={
          Array [
            1,
            2,
            3,
          ]
        }
        filterMap={Object {}}
        handleOpen={[Function]}
        resetFilters={[Function]}
        toggleAvailability={[Function]}
        toggleFilter={[Function]}
      />
    </glamorous(div)>
    <ListItem
      autoGenerateNestedIndicator={true}
      containerElement="span"
      disableKeyboardFocus={false}
      disabled={false}
      initiallyOpen={false}
      insetChildren={false}
      nestedItems={
        Array [
          <Connect(FilterDialog)
            filterGroups={
                Array [
                    1,
                    2,
                    3,
                  ]
            }
            handleClose={[Function]}
        />,
        ]
      }
      nestedLevel={0}
      onClick={[Function]}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onNestedListToggle={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      open={true}
      primaryText="Piú filtri"
      primaryTogglesNestedList={false}
      rightIcon={
        <ContentRemoveCircleOutline
          color="#fff"
          style={
            Object {
              "height": 30,
              "width": 30,
            }
          }
        />
      }
      secondaryTextLines={1}
      style={
        Object {
          "color": "white",
        }
      }
    />
  </List>
</glamorous(div)>
`;

exports[`filterBar should return null when filterGroups are empty 1`] = `null`;
